# grahamtools

./: pyproject.toml
examples/: alpha_beta_recurrence.py  binary_tree_edge_types.py  binary_tree_line_graphs.py  binary_tree_linear_fit.py  binary_tree_linearity.py  coeff_bootstrap.py  coeff_knm.py  coeff_matrix_n6.py  coeff_solve.py  collision_analysis.py  compute_fork_fiber.py  compute_k16_degree.py  count_Qd.py  debug_pair_and_draw.py  exp1_k7_fibers.py  exp2_cross_class.py  exp3_k5_deep.py  experiments.py  fiber_analysis.py  fiber_coefficeints.py  fiber_coefficients.py  fiber_degrees.py  fiber_iterate.py  find_subcubic_collisions.py  fork_degree_split.py  graham_dp.py  graham_from_coeffs.py  graham_sequence_from_g6.py  identify_nonzero.py  k5_deep_grade8.json  k7_fibers_grade5.json  k7_fibers_grade6.json  kn_fiber_compute.py  labels_kn.py  plt.py  search_permanent_null.py  spider_graham.py  star_path_graham.py  test_regular_approx.py  tree_bipartite_emb.py  (+11 more)
src/grahamtools/: .gitignore  __init__.py  quotient.py
src/grahamtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/grahamtools/invariants/: __init__.py  fiber.py  graham.py
src/grahamtools/io/: __init__.py  graph6.py
src/grahamtools/kn/: __init__.py  classify.py  expand.py  labels.py  levels.py
src/grahamtools/linegraph/: __init__.py  adjlist.py  iterate.py
src/grahamtools/search/: __init__.py  (+1 more)
tests/: test_adjlist_linegraph.py  test_equitable_partition.py  test_graham_signature.py  test_kn.py  test_nauty_expanded.py  test_quotient.py  test_utils.py  test_wlk_aligned.py
(+14 files in other folders)
