[project]
name = "grahamtools"
version = "0.1.0"
description = "Utilities for iterated line graphs, Graham sequences, WL-1, and collision searches."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["networkx>=3.0", "matplotlib>=3.7"]

[project.scripts]
graham = "grahamtools.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
